Bug 1060196 - Mark the volume as if we've started unmounting. r=dhylands